--- a/src/features/i18n/locales/en/server.json
+++ b/src/features/i18n/locales/en/server.json
@@ -1,4 +1,5 @@
 {
+  "breadcrumbs": "Breadcrumbs",
   "checkout": {
     "back-to-checkout": "Back to checkout",
     "checkout": "Checkout",
@@ -16,13 +17,16 @@
     "summary": "Summary"
   },
   "featured-products": "Featured products",
+  "home": "Home",
   "meta-description": "Centra swag store. Shop for the latest swag.",
   "pagination": {
     "next": "Next",
     "previous": "Previous"
   },
   "product": {
-    "out-of-stock": "Out of stock"
+    "color": "Color",
+    "out-of-stock": "Out of stock",
+    "related-products": "Related products"
   },
   "products": {
     "from-price": "from {{price}}",
@@ -65,6 +69,5 @@
       "reset-password": "Reset password",
       "something-went-wrong": "Something went wrong. Recovery link may be invalid or expired."
     }
-  },
-  "view-all": "View all"
+  }
 }
