--- a/src/features/i18n/locales/sv/server.json
+++ b/src/features/i18n/locales/sv/server.json
@@ -1,4 +1,5 @@
 {
+  "breadcrumbs": "Ströbröd",
   "checkout": {
     "back-to-checkout": "Tillbaka till kassan",
     "checkout": "Kassa",
@@ -16,13 +17,16 @@
     "summary": "Sammanfattning"
   },
   "featured-products": "Presenterade produkter",
+  "home": "Hem",
   "meta-description": "Centra swag butik. Handla för den senaste swag.",
   "pagination": {
     "next": "Nästa",
     "previous": "Tidigare"
   },
   "product": {
-    "out-of-stock": "Slut i lager"
+    "color": "Färg",
+    "out-of-stock": "Slut i lager",
+    "related-products": "Relaterade produkter"
   },
   "products": {
     "from-price": "från {{price}}",
@@ -65,6 +69,5 @@
       "reset-password": "Återställa lösenord",
       "something-went-wrong": "Något gick fel. Återställningslänken kan vara ogiltig eller löpa ut."
     }
-  },
-  "view-all": "Se alla"
+  }
 }
