Squash merge CORE-3752 into main

--- a/src/features/i18n/locales/en/server.json
+++ b/src/features/i18n/locales/en/server.json
@@ -34,6 +34,7 @@
     "no-products-found": "No products found",
     "title": "Products"
   },
+  "something-went-wrong": "Something went wrong.",
   "user": {
     "errors": {
       "invalid-login": "Invalid email or password",
