--- a/src/features/i18n/locales/sv/server.json
+++ b/src/features/i18n/locales/sv/server.json
@@ -34,6 +34,7 @@
     "no-products-found": "Inga produkter hittades",
     "title": "Produkt"
   },
+  "something-went-wrong": "Något gick fel.",
   "user": {
     "errors": {
       "invalid-login": "Ogiltig e-postadress eller lösenord",
