--- a/src/features/i18n/locales/sv/checkout.json
+++ b/src/features/i18n/locales/sv/checkout.json
@@ -1,40 +1,40 @@
 {
-  "billing-address": "Faktureringsadress",
+  "billing-address": "Fakturaadress",
   "cart": {
-    "hint": "Granska din nuvarande kundvagnsstatus."
+    "hint": "Granska din nuvarande varukorg."
   },
   "change": "Ändra",
-  "continue": "Fortsätta",
+  "continue": "Fortsätt",
   "delivery": "Leverans",
   "delivery-method": "Leveranssätt",
   "errors": {
-    "add-voucher": "Kunde inte lägga till kupong",
-    "cant-ship-to-country": "Vi kan inte skicka till det valda landet",
-    "could-not-finalize-payment": "Det gick inte att slutföra betalningen",
-    "fill-in-required-fields": "Vänligen fyll i alla obligatoriska fält",
-    "remove-voucher": "Det gick inte att ta bort kupongen",
-    "save-address": "Det gick inte att spara adressen",
-    "save-shipping": "Det gick inte att spara fraktmetoden",
-    "set-payment-method": "Det gick inte att ange betalningsmetod",
+    "add-voucher": "Kunde inte lägga till rabattkod",
+    "cant-ship-to-country": "Vi kan inte leverera till det valda landet",
+    "could-not-finalize-payment": "Kunde inte slutföra betalningen",
+    "fill-in-required-fields": "Fyll i alla obligatoriska fält",
+    "remove-voucher": "Kunde inte ta bort rabattkod",
+    "save-address": "Kunde inte spara adressen",
+    "save-shipping": "Kunde inte spara leveranssätt",
+    "set-payment-method": "Kunde inte välja betalningsmetod",
     "unavailable-items": {
-      "message": "Vissa artiklar är inte längre tillgängliga. De har tagits bort från din kundvagn. Vänligen granska din beställning innan du fortsätter.",
-      "title": "Ej tillgängliga artiklar"
+      "message": "Vissa artiklar är inte längre tillgängliga och har tagits bort från din varukorg. Kontrollera din beställning innan du fortsätter.",
+      "title": "Otillgängliga artiklar"
     }
   },
   "gift-card": {
-    "apply": "Tillämpas",
-    "cancel": "Avboka",
+    "apply": "Använd",
+    "cancel": "Avbryt",
     "card-number": "Kortnummer",
-    "could-not-apply": "Kunde inte tillämpa presentkort",
-    "empty-balance": "Presentkortet har ingen balans.",
+    "could-not-apply": "Kunde inte använda presentkortet",
+    "empty-balance": "Presentkortet har inget saldo.",
     "have-gift-card": "Jag har ett presentkort",
     "hint": "Lös in ditt presentkort och njut av din shopping.",
     "inactive-card": "Presentkortet är inaktivt.",
-    "insufficient-funds": "Presentkortet har inte tillräckligt med medel.",
-    "invalid-currency": "Presentkortvalutan matchar inte beställningsvalutan.",
-    "invalid-input": "Ogiltigt kortnummer eller stift.",
-    "pin": "STIFT",
-    "redeem": "Återlösa",
+    "insufficient-funds": "Presentkortet har inte tillräckligt med pengar.",
+    "invalid-currency": "Presentkortets valuta matchar inte beställningens valuta.",
+    "invalid-input": "Ogiltigt kortnummer eller PIN-kod.",
+    "pin": "PIN-kod",
+    "redeem": "Lös in",
     "title": "Presentkort"
   },
   "information": "Information",
@@ -42,26 +42,26 @@
   "pay-with-klarna": "Betala med Klarna",
   "payment": "Betalning",
   "payment-failed": "Betalningen misslyckades",
-  "payment-method": "Betalningssätt",
-  "proceed": "Fortsätta",
+  "payment-method": "Betalningsmetod",
+  "proceed": "Fortsätt",
   "receipt": {
-    "credit": "Kreditera",
+    "credit": "Kredit",
     "discount": "Rabatt",
-    "grand-total": "Totalsumma",
+    "grand-total": "Totalt att betala",
     "handling": "Hantering",
     "shipping": "Frakt",
     "subtotal": "Delsumma"
   },
   "secure-transactions": "Alla transaktioner är säkra och krypterade.",
   "shipping-address": "Leveransadress",
-  "terms": "Genom att klicka på \"$t(proceed)\", samtycker du till vår <1>villkor</1>",
-  "totals": "Summor",
+  "terms": "Genom att klicka på \"$t(proceed)\" godkänner du våra <1>villkor</1>",
+  "totals": "Summa",
   "voucher": {
-    "apply": "Tillämpas",
-    "apply-voucher": "Ansök voucher",
-    "code": "Verifikationskod",
-    "hide-voucher": "Dölj kupong",
-    "placeholder": "Ange din kupongkod här",
+    "apply": "Använd",
+    "apply-voucher": "Använd rabattkod",
+    "code": "Rabattkod",
+    "hide-voucher": "Dölj rabattkod",
+    "placeholder": "Ange din rabattkod här",
     "remove": "Ta bort"
   }
 }
