--- a/src/features/i18n/locales/en/server.json
+++ b/src/features/i18n/locales/en/server.json
@@ -17,7 +17,6 @@
     "summary": "Summary",
     "subscription-login-required": "You must <1>login</1> to checkout with subscription items."
   },
-  "featured-products": "Featured products",
   "home": "Home",
   "meta-description": "Centra swag store. Shop for the latest swag.",
   "pagination": {
@@ -25,6 +24,15 @@
     "previous": "Previous"
   },
   "product": {
+    "accordion": {
+      "product-description": "Product description",
+      "product-details": "Product details",
+      "delivery-and-returns": "Delivery and returns",
+      "collection": "Collection",
+      "brand": "Brand",
+      "variant": "Variant",
+      "delivery-returns-text": "See <1>delivery</1> and <3>returns</3> for more information."
+    },
     "color": "Color",
     "out-of-stock": "Out of stock",
     "related-products": "Related products"
