--- a/src/features/i18n/locales/en/shop.json
+++ b/src/features/i18n/locales/en/shop.json
@@ -59,12 +59,14 @@
   },
   "filters": {
     "brand": "Brand",
+    "collection": "Collection",
     "filter-by": "Filter by:",
     "name-a-to-z": "Name: A to Z",
     "name-z-to-a": "Name: Z to A",
     "newest": "Newest",
     "no-sorting": "No sorting",
     "oldest": "Oldest",
+    "only-available": "Only available",
     "price-high-to-low": "Price: High to Low",
     "price-low-to-high": "Price: Low to High",
     "search": "Search",
