--- a/src/features/i18n/locales/sv/shop.json
+++ b/src/features/i18n/locales/sv/shop.json
@@ -59,12 +59,14 @@
   },
   "filters": {
     "brand": "Märke",
+    "collection": "Kollektion",
     "filter-by": "Filtrera efter:",
     "name-a-to-z": "Namn: A till Ö",
     "name-z-to-a": "Namn: Ö till A",
     "newest": "Nyast",
     "no-sorting": "Ingen sortering",
     "oldest": "Äldst",
+    "only-available": "Endast tillgängliga",
     "price-high-to-low": "Pris: Hög till låg",
     "price-low-to-high": "Pris: Låg till hög",
     "search": "Sök",
